apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      securityContext:
        fsGroup: 33
        runAsUser: 33
        runAsGroup: 33 
      containers:
      - image: ghcr.io/sissbruecker/linkding:1.47.0-plus-alpine
        securityContext:
            allowPrivilegeEscalation: false
        name: linkding-cont
        ports:
          - containerPort: 9090
            name: linkding-port
            protocol: TCP
        volumeMounts:
          - name: linkding-data
            mountPath: /etc/linkding/data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-claim
