apps/base/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  labels:
    app: linkding
spec:
  ports:
    - port: 9090       # port the service will be available on
      targetPort: 9090 # targetport is port that inside of pod
  selector:
    app: linkding
  type: ClusterIP
