apps/base/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: linkding-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec: 
  ingressClassName: traefik
  rules: 
    - host: ld.filipwozniak.org 
      http:
        paths: 
          - backend: 
              service:
                name: linkding-service
                port:
                  number: 9090
            path: / 
            pathType: Prefix
  tls:
    - hosts:
      - ld.filipwozniak.org
      secretName: linkding-tls-prod-secret
